# secp256k1_SDA

./: .gitignore  CMakeLists.txt  Constants.h  GeneratorEnum.h  README.md  SECP256k1-SDA- ComponentDiag.vpp  SECP256k1-SDA- SeqDiag.vpp  TypeDef.h  dump.cpp  fileManager.cpp  functionality.cpp  main.cpp  testFunctionality.cpp  workspace.code-workspace
.circleci/: config.yml
Arithmetic/: Arithmetic.cpp  Arithmetic.h  CMakeLists.txt  TypeDef.h
Arithmetic/Algorithms/: Algorithms.cpp  Algorithms.h
Arithmetic/ModularArithmetic/: Mod.cpp  Mod.h
Arithmetic/PointArithmetic/: Generator_Constants.h  Point.cpp  Point.h
InstanceManager/: CMakeLists.txt  InstanceManager.cpp  InstanceManager.h
InstanceManager/Client_Instance/: Client_Instance.cpp  Client_Instance.drawio  Client_Instance.h  Client_Instance_Types.h
InstanceManager/Satellite_Instance/: Satellite_Instance.cpp  Satellite_Instance.h  Satellite_Instance_Types.h
InstanceManager/Server_Instance/: Server_Instance.cpp  Server_Instance.h  Server_Instance_Types.h
IterationLogic/: CMakeLists.txt  IterationLogic.cpp  IterationLogic.h
IterationLogic/CoordinationLogic/: Coordinator.cpp  Coordinator.h  Coordinator_Types.h
IterationLogic/CoordinationLogic/CoordinatorSM/: CoordinatorSM.cpp  CoordinatorSM.h
IterationLogic/IteratorLogic/: Iterator.cpp  Iterator.h  Iterator_Types.h
IterationLogic/IteratorLogic/IteratorSM/: IteratorSM.cpp  IteratorSM.h
NetworkLogic/: CMakeLists.txt  NetworkManager.cpp  NetworkManager.h
NetworkLogic/ClientLogic/Client/: Client.cpp  Client.h  Client_Types.h
NetworkLogic/ClientLogic/Client/ClientSM/: Client.drawio  ClientSM.cpp  ClientSM.h
NetworkLogic/ClientLogic/ClientHandler/: ClientHandler.h  ClientHandler_Types.h
NetworkLogic/ClientLogic/ClientHandler/ClientHandlerSM/: ClientHandler.drawio  ClientHandlerSM.cpp  ClientHandlerSM.h
NetworkLogic/ProtocolData/: ProtocolData.h
NetworkLogic/SatelliteLogic/Satellite/: Satellite.h  Satellite_Types.h
NetworkLogic/SatelliteLogic/Satellite/SatelliteSM/: SatelliteSM.cpp  SatelliteSM.h
NetworkLogic/SatelliteLogic/SatelliteHandler/: SatelliteHandler.h  SatelliteHandler_Types.h
NetworkLogic/SatelliteLogic/SatelliteHandler/SatelliteHandlerSM/: SatelliteHandlerSM.cpp  SatelliteHandlerSM.h
NetworkLogic/ServerLogic/Frontend/: Frontend.cpp  Frontend.h  Frontend_Types.h
NetworkLogic/ServerLogic/Frontend/FrontendSM/: FrontendSM.cpp  FrontendSM.h
NetworkLogic/ServerLogic/Server/: Server.cpp  Server.h  Server_Types.h
NetworkLogic/ServerLogic/Server/ServerSM/: ServerSM.cpp  ServerSM.h
Utility/: CMakeLists.txt  Utility.h
Utility/CommandLine/: CommandLine.cpp  CommandLine.h  CommandLine_Types.h
Utility/Communication/: Ports.cpp  Ports.h  Ports_Types.h
Utility/FileUtility/: FileUtility.cpp  FileUtility.h  FileUtility_Types.h
Utility/GlobalData/: Definitions.h  ErrorCodes.h
Utility/MemoryUtility/: MemoryUtility.cpp  MemoryUtility.h  MemoryUtility_Types.h
Utility/UI/: UI.cpp  UI.h  UI_Type.h
Utility/UI/ClientUI/: ClientUI.cpp  ClientUI.h
Utility/UI/SatelliteUI/: SatelliteUI.h
Utility/UI/ServerUI/: ServerUI.cpp  ServerUI.h
Utility/UI/TestUI/: MemoryTest.cpp  TestUI.h  ThreadTest.cpp
documentation/: TODO  server.drawio
include/: Constants.h  Mod.h  Operators.h  Point.h
managers/: CMakeLists.txt  Ports.cpp  Ports.h  UIManager.cpp  connectionManager.cpp  fileManager.cpp  functionality.cpp  iterationManager.cpp  managers.cpp  managers.h  memoryManager.cpp  networkManager.cpp  threadManager.cpp
managers/FileManager/: FileManager.cpp  FileManager.h
managers/IterationManager/: IterationManager.cpp  IterationManager.h
managers/IterationManager/StateMachines/: StateMachines.cpp  StateMachines.h
managers/IterationManager/StateMachines/CoordinatorSM/: CoordinatorSM.cpp  CoordinatorSM.h
managers/IterationManager/StateMachines/IteratorSM/: IteratorSM.cpp  IteratorSM.h
managers/MemoryManager/: MemoryManager.cpp  MemoryManager.h
managers/NetworkManager/: NetworkManager.cpp  NetworkManager.h
managers/NetworkManager/ProtocolData/: ProtocolData.h
managers/NetworkManager/StateMachines/: StateMachines.cpp  StateMachines.h
managers/NetworkManager/StateMachines/ClientHandlerSM/: ClientHandlerSM.cpp  ClientHandlerSM.h
managers/NetworkManager/StateMachines/ClientSM/: ClientSM.cpp  ClientSM.h
managers/NetworkManager/StateMachines/DummySM/: DummySM.cpp  DummySM.h
managers/NetworkManager/StateMachines/SatelliteHandlerSM/: SatelliteHandlerSM.cpp  SatelliteHandlerSM.h
managers/NetworkManager/StateMachines/SatelliteSM/: SatelliteSM.cpp  SatelliteSM.h
managers/NetworkManager/StateMachines/ServerFrontendSM/: ServerFrontendSM.cpp  ServerFrontendSM.h
managers/UIManager/: UIManager.cpp  UIManager.h
managers/UIManager/ClientUI/: ClientUI.cpp  ClientUI.h
managers/UIManager/SatelliteUI/: SatelliteUI.cpp  SatelliteUI.h
managers/UIManager/ServerUI/: ServerUI.cpp  ServerUI.h
managers/UIManager/TestUI/: AlgorithmTest.cpp  ArithmeticTest.cpp  FileTest.cpp  MemoryTest.cpp  NetworkTest.cpp  TestUI.cpp  TestUI.h  ThreadTest.cpp
managers/headers/: UIManager.h  connectionManager.h  fileManager.h  functionality.h  iterationManager.h  memoryManager.h  networkManager.h  threadManager.h
managers/tests/: functionalityTest.cpp  functionalityTest.h
runnables/: CMakeLists.txt  UI_runnable.cpp
runnables/headers/: UI_runnable.h  threadManager_runnable.h  thread_runnable.h
src/: Algorithms.cpp  CMakeLists.txt  Iterators.cpp  Mod.cpp  Operators.cpp  Point.cpp
src/headers/: Algorithms.h  Constants.h  Iterators.h  Mod.h  Operators.h  Point.h
